<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2013 Remel Pugh
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ 	http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Car Log</string>
    <string name="delete_data">Deleting data&#8230;</string>
    <string name="home">Home</string>
    <string name="initializing_message">Initializing data&#8230;</string>
    <string name="field_required">A value is required</string>
    <string name="miles_per_gallon">%.3f mpg</string>
    <string name="gallons">%.3f gal</string>
    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="statistics">Statistics</string>

    <!-- PREFERENCES STRINGS -->
    <string name="preferences_category_about_summary">Information about this application</string>
    <string name="preferences_category_about_title">About</string>
    <string name="preferences_category_maintenance_summary">Perform an application maintenance.</string>
    <string name="preferences_category_maintenance_title">Application Maintenance</string>
    <string name="preferences_maintenance_backup_summary">Backup the applications preferences and database.</string>
    <string name="preferences_maintenance_backup_title">Backup</string>
    <string name="preferences_maintenance_drive_summary">Backup application data to your Google Drive account.</string>
    <string name="preferences_maintenance_drive_title">Google Drive</string>
    <string name="preferences_maintenance_dropbox_summary">Backup application data to your Dropbox account.</string>
    <string name="preferences_maintenance_dropbox_title">Dropbox</string>
    <string name="preferences_about_change_log_summary">Display application change log.</string>
    <string name="preferences_about_change_log_title">Change log</string>
    <string name="preferences_about_open_source_summary">Display open source licenses used by this application.</string>
    <string name="preferences_about_open_source_title">Open source licenses</string>
    <!-- END PREFERENCES STRINGS -->

    <!-- FUEL HISTORY STRINGS -->
    <string name="fuel_history">Fuel History</string>
    <string name="fuel_history_3_decimal">0.000</string>
    <string name="fuel_history_add">Add Fuel history entry</string>
    <string name="fuel_history_cost_per_unit">%s/gal</string>
    <string name="fuel_history_date">Date/Time</string>
    <string name="fuel_history_detail_empty">Select history to display the details</string>
    <string name="fuel_history_details">Fuel History Details</string>
    <string name="fuel_history_edit">Edit Fuel History</string>
    <string name="fuel_history_empty">No fuel history records found</string>
    <string name="fuel_history_odom">Odometer Reading</string>
    <string name="fuel_history_miles">%.0f miles</string>
    <string name="fuel_history_mpg">Miles per gallon</string>
    <string name="fuel_history_new">New Fuel History Record</string>
    <string name="fuel_history_notes">Notes</string>
    <string name="fuel_history_money">0.00</string>
    <string name="fuel_history_price">Price/Gallon</string>
    <string name="fuel_history_select">Select history to delete</string>
    <string name="fuel_history_total">Total Cost</string>
    <string name="fuel_history_volume">Number Gallons</string>
    <!-- END FUEL HISTORY STRINGS -->

    <!-- REMINDER STRINGS -->
    <string name="reminders">Reminders</string>
    <string name="reminders_add">Add Reminder</string>
    <string name="reminders_empty">No reminders created</string>
    <string name="reminders_new">New Reminder</string>
    <!-- END REMINDER STRINGS -->

    <!-- STATISTICS STRINGS -->
    <string name="statistics_empty">No history records to calculate statistics</string>
    <!-- END STATISTICS STRINGS -->

    <!-- VEHICLE STRINGS -->
    <string name="vehicle_add">Add New Vehicle</string>
    <string name="vehicle_create_another">Would you like to create another vehicle?</string>
    <string name="vehicle_detail_empty">Select vehicle to display the details</string>
    <string name="vehicle_edit">Edit Vehicle</string>
    <string name="vehicle_empty">No vehicles found</string>
    <string name="vehicle_license_plate">License Plate</string>
    <string name="vehicle_make">Make</string>
    <string name="vehicle_model">Model</string>
    <string name="vehicle_name">Vehicle Name</string>
    <string name="vehicle_new">New Vehicle</string>
    <string name="vehicle_select">Select vehicles to delete</string>
    <string name="vehicle_year">Year</string>
    <string name="vehicle_vin">Vin Number</string>
    <string name="vehicles">Vehicles</string>
    <!-- END VEHICLE STRINGS -->

    <!-- GOOGLE DRIVE STRINGS -->
    <!-- END GOOGLE DRIVE STRINGS -->

    <!-- DROPBOX STRINGS -->
    <string name="dropbox_link_failed">Link to Dropbox failed or was cancelled.</string>
    <string name="open_source_dropbox_sdk">Dropbox SDK</string>
    <string name="open_source_dropbox_sdk_license">
        <![CDATA[
        <pre>
        Sync SDK Copyright 2013 (&#169;) Dropbox, Inc.

        Licensed under the Apache License, Version 2.0 (the "License");
        you may not use this file except in compliance with the License.
        You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

        Unless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and
        limitations under the License.
        </pre>
        ]]>
    </string>
    <!-- END DROPBOX STRINGS -->
</resources>
