<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2014 Remel Pugh
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
            android:title="@string/preferences_category_maintenance_title"
            android:summary="@string/preferences_category_maintenance_summary">
        <Preference
                android:key="Dropbox"
                android:icon="@drawable/ic_action_dropbox"
                android:summary="@string/preferences_maintenance_dropbox_summary"
                android:title="@string/preferences_maintenance_dropbox_title" />
        <Preference
                android:key="BackupApp"
                android:summary="@string/preferences_maintenance_backup_summary"
                android:title="@string/preferences_maintenance_backup_title" />
    </PreferenceCategory>

    <PreferenceCategory
            android:key="About"
            android:title="@string/preferences_category_about_title"
            android:summary="@string/preferences_category_about_summary">
        <Preference
                android:key="OpenSource"
                android:summary="@string/preferences_about_open_source_summary"
                android:title="@string/preferences_about_open_source_title" />
        <Preference
                android:key="ChangeLog"
                android:title="@string/preferences_about_change_log_title" />
    </PreferenceCategory>

</PreferenceScreen>