<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2014 Remel Pugh
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <include layout="@layout/button_bar" />

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/buttonBar"
            android:layout_alignParentTop="true">

        <LinearLayout
                style="@style/Form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                    style="@style/FormFieldLabel"
                    android:text="@string/fuel_history_date" />

            <EditText
                    style="@style/FormField"
                    android:id="@+id/date_time"
                    android:hint="@string/fuel_history_date"
                    android:inputType="none" />

            <TextView
                    style="@style/FormFieldLabel"
                    android:text="@string/fuel_history_odom" />

            <EditText
                    style="@style/FormField"
                    android:id="@+id/odometer"
                    android:hint="@string/fuel_history_odom"
                    android:inputType="numberDecimal"
                    android:imeOptions="actionNext"
                    android:nextFocusDown="@+id/volume">

                <requestFocus />
            </EditText>

            <TextView
                    style="@style/FormFieldLabel"
                    android:text="@string/fuel_history_volume" />

            <EditText
                    style="@style/FormField"
                    android:id="@+id/volume"
                    android:hint="@string/fuel_history_3_decimal"
                    android:inputType="numberDecimal"
                    android:imeOptions="actionNext"
                    android:nextFocusDown="@+id/price" />

            <TextView
                    style="@style/FormFieldLabel"
                    android:text="@string/fuel_history_price" />

            <EditText
                    style="@style/FormField"
                    android:id="@+id/price"
                    android:hint="@string/fuel_history_3_decimal"
                    android:inputType="numberDecimal"
                    android:imeOptions="actionNext"
                    android:nextFocusDown="@+id/total" />

            <TextView
                    style="@style/FormFieldLabel"
                    android:text="@string/fuel_history_total" />

            <EditText
                    style="@style/FormField"
                    android:id="@+id/total"
                    android:hint="@string/fuel_history_money"
                    android:inputType="numberDecimal"
                    android:imeOptions="actionNext"
                    android:nextFocusDown="@+id/notes" />

            <TextView
                    style="@style/FormFieldLabel"
                    android:text="@string/fuel_history_notes" />

            <EditText
                    style="@style/FormField"
                    android:id="@+id/notes"
                    android:hint="@string/fuel_history_notes"
                    android:inputType="textMultiLine"
                    android:imeOptions="actionDone" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>