<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2014 Remel Pugh
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <include layout="@layout/button_bar" />

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/buttonBar"
            android:layout_alignParentTop="true">

        <LinearLayout
                style="@style/Form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                    style="@style/FormFieldLabel"
                    android:text="@string/vehicle_name" />

            <EditText
                    style="@style/FormField"
                    android:id="@+id/name"
                    android:hint="@string/vehicle_name"
                    android:inputType="text"
                    android:imeOptions="actionNext"
                    android:nextFocusDown="@+id/make">

                <requestFocus />
            </EditText>

            <TextView
                    style="@style/FormFieldLabel"
                    android:text="@string/vehicle_make" />

            <AutoCompleteTextView
                    style="@style/FormField"
                    android:id="@+id/make"
                    android:completionThreshold="1"
                    android:hint="@string/vehicle_make"
                    android:imeOptions="actionNext"
                    android:nextFocusDown="@+id/model"
                    android:singleLine="true" />

            <TextView
                    style="@style/FormFieldLabel"
                    android:text="@string/vehicle_model" />

            <AutoCompleteTextView
                    style="@style/FormField"
                    android:id="@+id/model"
                    android:completionThreshold="1"
                    android:enabled="false"
                    android:hint="@string/vehicle_model"
                    android:imeOptions="actionNext"
                    android:nextFocusDown="@+id/year"
                    android:singleLine="true" />

            <TextView
                    style="@style/FormFieldLabel"
                    android:text="@string/vehicle_year" />

            <EditText
                    style="@style/FormField"
                    android:id="@+id/year"
                    android:hint="@string/vehicle_year"
                    android:inputType="number"
                    android:imeOptions="actionNext"
                    android:nextFocusDown="@+id/license_plate" />

            <TextView
                    style="@style/FormFieldLabel"
                    android:text="@string/vehicle_license_plate" />

            <EditText
                    style="@style/FormField"
                    android:id="@+id/license_plate"
                    android:hint="@string/vehicle_license_plate"
                    android:inputType="text"
                    android:imeOptions="actionNext"
                    android:nextFocusDown="@+id/vin" />

            <TextView
                    style="@style/FormFieldLabel"
                    android:text="@string/vehicle_vin" />

            <EditText
                    style="@style/FormField"
                    android:id="@+id/vin"
                    android:hint="@string/vehicle_vin"
                    android:inputType="text"
                    android:imeOptions="actionDone"
                    android:imeActionLabel="@string/save" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>